--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^1.1.0"
+    "semantic-ui-react": "^1.1.0",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
